--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@ if(d.getTime() > g2.getTime() && day_number%7 != 0) {
     document.getElementById("box-5").style.border = "1px solid";
     document.getElementById("box-5").style.padding = "10px";
     document.getElementById("box-5").style.boxShadow = "5px 5px";
+    document.getElementById("box-5").style.backgroundImage = "url('https://blogger.googleusercontent.com/img/a/AVvXsEhwFNa1tXHQsXEhmp2eMVi1sU10uFgl1xx1LeRxpjPUORpT8cuSqT7fXJF_rOpSTS_yif-lX0CcaCbdQ0HjpCvHT6VPV_Et5rS7VL_URG1gog_Dvas4VQJVDRNJuxOR-UAgrFXv2zfBfoISTVPkNU_C9zp80VeMeearcZSx9q7Ilm78_WDWFY800i44ag=s226')";
     if("BREAK"== weekly_Routine[day_number][4].split(".")[0]) 
       document.getElementById("message").innerHTML = "Lunch time! Enjoy your food!"
     }
