--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <title>KAI(M) Boy's Master Routine</title>
     <head>
+      <h6>Site maintained and developed by Vinod Singh. This is a beta version, verify the data on your side.</h6>
       <h3 id="h3"></h3>
       <h5 id="h5"></h5>
       <h4 id="h4"></h4>
