--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
 <body onload="startTime()">
     <style>
-
+#input-teacher-name {
+      font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+      font-size: 18px;
+      }
 .button-7 {
   background-color: #0095ff;
   border: 1px solid transparent;
