--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <html>
   <title>KAI(M) Boy's Master Routine</title>
     <head>
-      <h6>Site maintained and developed by Vinod Singh. This is a beta version, verify the data on your side.</h6>
+      <h6 id="h6">Site maintained and developed by Vinod Singh. This is a beta version, verify the data on your side.</h6>
       <h3 id="h3"></h3>
       <h5 id="h5"></h5>
       <h4 id="h4"></h4>
     </head>
 <body onload="startTime()">
     <style>
+      #h6 {
+      font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+      font-size: 10px;
+      }
 #input-teacher-name {
       font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
       font-size: 18px;
