--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     </head>
 <body onload="startTime()">
     <style>
+      #h3,#h5,#h4 {
+      font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+      }
       #h6 {
       font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
       font-size: 10px;
