--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
       font-size: 18px;
       }
-.button-7 {
+  .button-7, .button {
   background-color: #0095ff;
   border: 1px solid transparent;
   border-radius: 3px;
@@ -50,19 +50,19 @@
 }
 
 .button-7:hover,
-.button-7:focus {
+.button-7:focus, .button:hover, .button:focus {
   background-color: #07c;
 }
 
-.button-7:focus {
+.button-7:focus, .button:focus {
   box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
 }
 
-.button-7:active {
+.button-7:active, .button:active {
   background-color: #0064bd;
   box-shadow: none;
 }
-      table.GeneratedTable {
+  table.GeneratedTable {
   width: 100%;
   background-color: #ffffff;
   border-collapse: collapse;
