--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
   <title>KAI(M) Boy's Master Routine</title>
     <head>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6701104685381436"
+     crossorigin="anonymous"></script>
       <h6 id="h6">Site maintained and developed by Vinod Singh. This is a beta version, verify the data on your side.</h6>
       <hr>
       <h3 id="h3"></h3>
