--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ table.GeneratedTable thead {
 </html>
 <script>
 function javaCode() {
+  ShowRoutine();
   var x = document.getElementById("weekly-routine");
   if (x.style.display === "none") {
     x.style.display = "block";
