--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ table.GeneratedTable thead {
         <input id="teacher-name" size="5" type="text" />
         <button class="button" onclick="ShowRoutine()">Show Routine</button>
         <button class="button-7" role="button" onclick="javaCode()">Weekly Routine</button>
-        <button class="holiday-b" role="button" onclick="javaCode()">Upcoming Holidays</button>
+        <button class="holiday-b" role="button">Upcoming Holidays</button>
         <p id="temp">Upcoming Holiday feature to be updated soon!:</p>
       </div>
         <div id="box-container">
