--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     let month = today.getMonth();
     let date = today.getDate();
     let weekDay = today.getDay();
-    var holidayList = [];
+    var holidayList = ["Friday.18.03.2022","Saturday.19.03.2022"];
     var count = 0;
     for (var i = date; i <= mdays[month]; i++) {
       var g = new Date(today.getFullYear(), today.getMonth(), i, 11, 15, 00);
