--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
 
     #input-teacher-name,
-    #temp {
+    #temp, #holiday-list {
       font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
       font-size: 18px;
     }
