--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <button class="button" onclick="ShowRoutine()">Show Routine</button>
     <button class="button-7" role="button" onclick="javaCode()">Weekly Routine</button>
     <button class="holiday-b" role="button" onclick="upcomingHolidays()">Upcoming Holidays</button>
-    <p id="holiday-list">Upcoming Holiday feature to be updated soon!:</p>
+    <p id="holiday-list" style="display: none;">Upcoming Holiday feature to be updated soon!:</p>
   </div>
   <div id="box-container">
     <div id="box-1"></div>
