--- a/index.html
+++ b/index.html
@@ -295,13 +295,15 @@
 <script>
   function ShowRoutine() {
     var teacher_name = (document.getElementById("teacher-name").value).toUpperCase();
-    //if(teacher_name == Null)
-      //location.reload()
-    document.getElementById("h3").innerHTML = "Hi " + teacher_name + "! Your schedule is given below.";
-        const teacher_set = ["VKS", "SS", "CG", "PD", "SDN", "AHR", "IPAL", "NKM", "SK", "AHL", "SMD", "PM","RC","BN","BMU"];
+    const teacher_set = ["VKS", "SS", "CG", "PD", "SDN", "AHR", "IPAL", "NKM", "SK", "AHL", "SMD", "PM","RC","BN","BMU"];
     var count = 0;
     while (teacher_name != teacher_set[count])
       count++;
+    if (count >= teacher_set.length) {
+      document.getElementById("h3").innerHTML = "Data not found or wrong initial entered:";  
+    }
+    else {
+    document.getElementById("h3").innerHTML = "Hi " + teacher_name + "! Your schedule is given below.";
     var magic_number = (count * 7);
     //alert(magic_number);
     // master routine initializatio
@@ -518,6 +520,7 @@
     }
     else
       document.getElementById("message").innerHTML = "Relax! No classes for now!"
+  }
   }
 </script>
 
