--- a/index.html
+++ b/index.html
@@ -177,6 +177,17 @@
       height: 50%;
     }
   </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6701104685381436"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-6701104685381436"
+     data-ad-slot="5574370082"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <div>
     <p id="input-teacher-name">Enter your initials:</p>
     <input id="teacher-name" size="5" type="text" />
