--- a/index.html
+++ b/index.html
@@ -177,14 +177,15 @@
       height: 50%;
     }
   </style>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6701104685381436"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6701104685381436"
      crossorigin="anonymous"></script>
+<!-- routine -->
 <ins class="adsbygoogle"
-     style="display:block; text-align:center;"
-     data-ad-layout="in-article"
-     data-ad-format="fluid"
+     style="display:block"
      data-ad-client="ca-pub-6701104685381436"
-     data-ad-slot="5574370082"></ins>
+     data-ad-slot="6594794944"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
