--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     .button-7:focus,
     .button:focus,
-    .holiday-b:focus,
+    .holiday-b:focus
       {
       box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
     }
