--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     #input-teacher-name,
     #temp,
-    #holiday-list-time {
+    #holiday-list-time, #holiday-output-message {
       font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
       font-size: 18px;
     }
@@ -185,6 +185,7 @@
     <button class="holiday-b" role="button" onclick="upcomingHolidays()">Upcoming Holidays</button>
     <p id="holiday-list-time" style="display: none;"></p>
     <p id="holiday-list" style="display: none;">Upcoming Holiday feature to be updated soon!:</p>
+    <p id="#holiday-output-message" style="display: none;">Upcoming Holiday feature to be updated soon!:</p>
   </div>
   <div id="box-container">
     <div id="box-1"></div>
@@ -408,9 +409,9 @@
 
       if (day_number % 7 == 0 || holiday) {
         if (holiday)
-          document.getElementById("holiday-list-time").innerHTML = "Today is "+holidayList[tag].split(".")[0]+" enjoy your holiday!";
+          document.getElementById("#holiday-output-message").innerHTML = "Today is "+holidayList[tag].split(".")[0]+" enjoy your holiday!";
         else
-          document.getElementById("holiday-list-time").innerHTML = "Today is Sunday! enjoy your holiday!";
+          document.getElementById("#holiday-output-message").innerHTML = "Today is Sunday! enjoy your holiday!";
         document.getElementById("box-1").innerHTML = "";
         document.getElementById("box-2").innerHTML = "";
         //document.getElementById("box-3").innerHTML = "Sunday!"
