--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <button class="holiday-b" role="button" onclick="upcomingHolidays()">Upcoming Holidays</button>
     <p id="holiday-list-time" style="display: none;"></p>
     <p id="holiday-list" style="display: none;">Upcoming Holiday feature to be updated soon!:</p>
-    <p id="#holiday-output-message" style="display: none;">Upcoming Holiday feature to be updated soon!:</p>
+    <p id="#holiday-output-message"></p>
   </div>
   <div id="box-container">
     <div id="box-1"></div>
