--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
           document.getElementById("holiday-output-message").innerHTML = "Today is "+holidayList[tag].split(".")[0]+" enjoy your holiday!";
         else
           document.getElementById("holiday-output-message").innerHTML = "Today is Sunday! enjoy your holiday!";
-        document.getElementById("box-container").innerHTML = "url('https://en.wikipedia.org/wiki/Holi#/media/File:A_Holi_Festival_-_Krishna_Radha_and_Gopis.jpg')";
+        document.getElementById("box-container").style.backgroundImage = "url('https://en.wikipedia.org/wiki/Holi#/media/File:A_Holi_Festival_-_Krishna_Radha_and_Gopis.jpg')";
         document.getElementById("box-2").innerHTML = "";
         document.getElementById("box-3").innerHTML = "";
         document.getElementById("box-4").innerHTML = "";
