--- a/index.html
+++ b/index.html
@@ -413,13 +413,13 @@
         else
           document.getElementById("holiday-output-message").innerHTML = "Today is Sunday! enjoy your holiday!";
         document.getElementById("box-container").style.backgroundImage = "url('https://en.wikipedia.org/wiki/Holi#/media/File:A_Holi_Festival_-_Krishna_Radha_and_Gopis.jpg')";
-        document.getElementById("box-2").innerHTML = "";
+        /*document.getElementById("box-2").innerHTML = "";
         document.getElementById("box-3").innerHTML = "";
         document.getElementById("box-4").innerHTML = "";
         document.getElementById("box-5").innerHTML = "";
         document.getElementById("box-6").innerHTML = "";
         document.getElementById("box-7").innerHTML = "";
-        document.getElementById("box-8").innerHTML = "";
+        document.getElementById("box-8").innerHTML = "";*/
       }
       else {
         document.getElementById("box-1").innerHTML = weekly_Routine[day_number][0];
