--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
       margin-top: 40px;
     }
 
-    #info-centre {
-      height: 350px;
+    #info-centre, #holiday-image {
+      height: 650px;
+      width: 1000px;
       display: flex;
       font-family: "Lucida Console";
       font-size: 25px;
@@ -186,7 +187,9 @@
     <p id="holiday-list-time" style="display: none;"></p>
     <p id="holiday-list" style="display: none;">Upcoming Holiday feature to be updated soon!:</p>
     <p id="holiday-output-message"></p>
+    <p id="holiday-image"></p>
   </div>
+  
   <div id="box-container">
     <div id="box-1"></div>
     <div id="box-2"></div>
@@ -412,14 +415,15 @@
           document.getElementById("holiday-output-message").innerHTML = "Today is "+holidayList[tag].split(".")[0]+" enjoy your holiday!";
         else
           document.getElementById("holiday-output-message").innerHTML = "Today is Sunday! enjoy your holiday!";
-        document.getElementById("box-container").style.backgroundImage = "url('https://en.wikipedia.org/wiki/Holi#/media/File:A_Holi_Festival_-_Krishna_Radha_and_Gopis.jpg')";
-        /*document.getElementById("box-2").innerHTML = "";
+        document.getElementById("holiday-image").style.backgroundImage = "url('https://blogger.googleusercontent.com/img/a/AVvXsEgXFrrBH1PZAkewtuvg46fsyQ4r4RnWD_PZpIHllZKp_1V0_IH958psCrUmKMAm8x_anYqFE1L9oFMmwwHjB6lqrBBQUOHIu5grvkS4AvVmqLH3Fmo88SGyedm3e_iYeiXlkal1GWwh3rJpgRwaxSRo65-1eyKJnjCzXmT63RrrYnmbVC6Bova_FnzXFQ=s1024')";
+        //document.getElementById("holiday-image").style.backgroundImage = "url('https://blogger.googleusercontent.com/img/a/AVvXsEhwFNa1tXHQsXEhmp2eMVi1sU10uFgl1xx1LeRxpjPUORpT8cuSqT7fXJF_rOpSTS_yif-lX0CcaCbdQ0HjpCvHT6VPV_Et5rS7VL_URG1gog_Dvas4VQJVDRNJuxOR-UAgrFXv2zfBfoISTVPkNU_C9zp80VeMeearcZSx9q7Ilm78_WDWFY800i44ag=s226')";
+        document.getElementById("box-2").innerHTML = "";
         document.getElementById("box-3").innerHTML = "";
         document.getElementById("box-4").innerHTML = "";
         document.getElementById("box-5").innerHTML = "";
         document.getElementById("box-6").innerHTML = "";
         document.getElementById("box-7").innerHTML = "";
-        document.getElementById("box-8").innerHTML = "";*/
+        document.getElementById("box-8").innerHTML = "";
       }
       else {
         document.getElementById("box-1").innerHTML = weekly_Routine[day_number][0];
