--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     }
 
     #info-centre, #holiday-image {
-      height: 650px;
-      width: 1000px;
+      height: auto;
+      width: auto;
       display: flex;
       font-family: "Lucida Console";
       font-size: 25px;
