--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ q {font-style: italic;}
   <div class="slideshow-container">
 
     <div class="mySlides">
-      <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-      <p class="author">- John Keats</p>
+      <q>The highest education is that which does not merely give us information, but makes our life in harmony with all existence</q>
+      <p class="author">- Tagore R.</p>
     </div>
     
     <div class="mySlides">
