--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ q {font-style: italic;}
     <p id="holiday-output-message"></p>
     <p id="holiday-image"><img id="img-hol" style="display:none;"
         src="https://blogger.googleusercontent.com/img/a/AVvXsEgXFrrBH1PZAkewtuvg46fsyQ4r4RnWD_PZpIHllZKp_1V0_IH958psCrUmKMAm8x_anYqFE1L9oFMmwwHjB6lqrBBQUOHIu5grvkS4AvVmqLH3Fmo88SGyedm3e_iYeiXlkal1GWwh3rJpgRwaxSRo65-1eyKJnjCzXmT63RrrYnmbVC6Bova_FnzXFQ=s1024">
-    </p>
+    <img id="img-sun" style="display:none;" src="https://blogger.googleusercontent.com/img/a/AVvXsEhLbnMsoDs3nS5joauOySI4eIf22Sq2_TIdAML5Zhq29UeaCemXU6dESruy5Q09rFL4b4PcmeXCZgfG4DktSPD-7tS97yMrHvbkxJXEvwysSbp7goXu0S6cDKwOhQVefdTDw0v9fGNhIkL_f2ZwntbZgyaaTSazRE84PxST5tkN5A0IKVZWIqzCbj0iuA=s793"> </p>
   </div>
 
   <div id="box-container">
@@ -539,6 +539,7 @@ q {font-style: italic;}
       // checking ends here
 
       //alert(noClassHSXI);
+      // if holiday check for sunday and classes off due to exam
       if (day_number % 7 == 0 || holiday) {
         if (holiday && !noClassHSXI) {
           document.getElementById("holiday-output-message").innerHTML = "Today is " + holidayList[tag].split(".")[0] + "! Enjoy your holiday!";
@@ -549,9 +550,12 @@ q {font-style: italic;}
         }
         else if (noClassHSXI)
           document.getElementById("holiday-output-message").innerHTML = "No Classes due to HS Exam!";
-        else
-          document.getElementById("holiday-output-message").innerHTML = "Today is Sunday! enjoy your holiday!";
-
+        else {
+          document.getElementById("holiday-output-message").innerHTML = "Today is Sunday! Enjoy your holiday.";
+          document.getElementById("img-sun").style.display = "block";
+          document.getElementById("box-container").style.display = "none";
+          document.getElementById("info-centre").style.display = "none";
+          }
         //if (document.getElementById("img-hol").style.display.style.display === "none") 
 
       }
