--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ q {font-style: italic;}
           document.getElementById("holiday-output-message").innerHTML = "Today is Sunday! Enjoy your holiday.";
           document.getElementById("img-sun").style.display = "block";
           document.getElementById("box-container").style.display = "none";
-          document.getElementById("info-centre").style.display = "none";
+          //document.getElementById("info-centre").style.display = "none";
           }
         //if (document.getElementById("img-hol").style.display.style.display === "none") 
 
