--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ q {font-style: italic;}
   <div class="slideshow-container">
 
     <div class="mySlides">
-      <q>The highest education is that which does not merely give us information, but makes our life in harmony with all existence</q>
-      <p class="author">- Tagore R.</p>
+      <q>Success is not final, failure is not fatal: it is the courage to continue that counts.</q>
+      <p class="author">- Churchill W.</p>
     </div>
     
     <div class="mySlides">
