--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ q {font-style: italic;}
       var noClassHSXI = Boolean(0);
       var tag = -1;
       //var tagHSXI = -1;
-      var holidayList = ["(Dol Jatra).Friday.18.03.2022", "(Holi).Saturday.19.03.2022",
+      var holidayList = ["(Dol Jatra).Friday.18.03.2022", "(Holi).Saturday.19.03.2022","Harichandra Thakur Birthday.Wednesday.30.03.2022",
         "(Ambedkar and Mahavir Jayanti).Thursday.14.4.2022",
         "(Bengali New Year).Thursday.15.04.2022", "(HS Exam Duty).Saturday.02.04.2022",
         "(HS Exam Duty).Monday.04.04.2022", "(HS Exam Duty).Tuesday.5.04.2022",
@@ -725,7 +725,7 @@ q {font-style: italic;}
     let month = today.getMonth();
     let date = today.getDate();
     let weekDay = today.getDay();
-    var holidayList = ["(Dol Jatra).Friday.18.03.2022", "(Holi).Saturday.19.03.2022",
+    var holidayList = ["(Dol Jatra).Friday.18.03.2022", "(Holi).Saturday.19.03.2022","Harichand Thakur Birthday.Wednesday.30.03.2022",
       "(Ambedkar & Mahavir Jayanti).Thursday.14.4.2022",
       "(Bengali New Year).Thursday.15.4.2022", "(May Day).Saturday.1.5.2022"];
     var nextHolidays = [];
