--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ q {font-style: italic;}
     <p id="exam-list" style="display: none;"></p>
     <p id="holiday-output-message"></p>
     <p id="holiday-image"><img id="img-hol" style="display:none;"
-        src="https://blogger.googleusercontent.com/img/a/AVvXsEgXFrrBH1PZAkewtuvg46fsyQ4r4RnWD_PZpIHllZKp_1V0_IH958psCrUmKMAm8x_anYqFE1L9oFMmwwHjB6lqrBBQUOHIu5grvkS4AvVmqLH3Fmo88SGyedm3e_iYeiXlkal1GWwh3rJpgRwaxSRo65-1eyKJnjCzXmT63RrrYnmbVC6Bova_FnzXFQ=s1024">
+        src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiwcpMU5VyYwI3IhgkkyZFcXdixZSOlVJ0L_Rbbri6-G8XcMDFEeGI02Q3utwFlOiqwDqGtnHoRY2r-t0OuX73vP4dR7cfa3BclQd5qeIcuS90XMllGIv0T7MaLTgS5bGBCr4dSVQwEzhyDLkNPNhVX_45d75kM6z65gfhknnQYy2lacmL0B-Ma2eXdjg/s2048/holida_general.jpeg">
     <img id="img-sun" style="display:none;" src="https://blogger.googleusercontent.com/img/a/AVvXsEhLbnMsoDs3nS5joauOySI4eIf22Sq2_TIdAML5Zhq29UeaCemXU6dESruy5Q09rFL4b4PcmeXCZgfG4DktSPD-7tS97yMrHvbkxJXEvwysSbp7goXu0S6cDKwOhQVefdTDw0v9fGNhIkL_f2ZwntbZgyaaTSazRE84PxST5tkN5A0IKVZWIqzCbj0iuA=s793"> </p>
   </div>
 
