--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@ q {font-style: italic;}
     <p id="holiday-list" style="display: none;"></p>
     <p id="exam-list" style="display: none;"></p>
     <p id="holiday-output-message"></p>
-    <p id="holiday-image"><img id="img-hol" style="display:none;"
+    <p id="holiday-image"><img id="img-hol" style="display:none;" height="auto" max-width="100%"
         src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiwcpMU5VyYwI3IhgkkyZFcXdixZSOlVJ0L_Rbbri6-G8XcMDFEeGI02Q3utwFlOiqwDqGtnHoRY2r-t0OuX73vP4dR7cfa3BclQd5qeIcuS90XMllGIv0T7MaLTgS5bGBCr4dSVQwEzhyDLkNPNhVX_45d75kM6z65gfhknnQYy2lacmL0B-Ma2eXdjg/s2048/holida_general.jpeg">
-    <img id="img-sun" style="display:none;" src="https://blogger.googleusercontent.com/img/a/AVvXsEhLbnMsoDs3nS5joauOySI4eIf22Sq2_TIdAML5Zhq29UeaCemXU6dESruy5Q09rFL4b4PcmeXCZgfG4DktSPD-7tS97yMrHvbkxJXEvwysSbp7goXu0S6cDKwOhQVefdTDw0v9fGNhIkL_f2ZwntbZgyaaTSazRE84PxST5tkN5A0IKVZWIqzCbj0iuA=s793"> </p>
+    <img id="img-sun" style="display:none;" height="auto" max-width="100%" src="https://blogger.googleusercontent.com/img/a/AVvXsEhLbnMsoDs3nS5joauOySI4eIf22Sq2_TIdAML5Zhq29UeaCemXU6dESruy5Q09rFL4b4PcmeXCZgfG4DktSPD-7tS97yMrHvbkxJXEvwysSbp7goXu0S6cDKwOhQVefdTDw0v9fGNhIkL_f2ZwntbZgyaaTSazRE84PxST5tkN5A0IKVZWIqzCbj0iuA=s793"> </p>
   </div>
 
   <div id="box-container">
@@ -545,8 +545,8 @@ q {font-style: italic;}
       if (day_number % 7 == 0 || holiday) {
         if (holiday && !noClassHSXI) {
           document.getElementById("holiday-output-message").innerHTML = "Today is " + holidayList[tag].split(".")[0] + "! Enjoy your holiday!";
-          document.getElementById("img-hol").width = "1000";
-          document.getElementById("img-hol").height = "650";
+          //document.getElementById("img-hol").width = "1000";
+          //document.getElementById("img-hol").height = "650";
           document.getElementById("img-hol").style.display = "block";
           document.getElementById("box-container").style.display = "none";
         }
