--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ q {font-style: italic;}
       var holidayList = ["(Dol Jatra).Friday.18.03.2022", "(Holi).Saturday.19.03.2022","Harichandra Thakur Birthday.Wednesday.30.03.2022",
         "(Ambedkar and Mahavir Jayanti).Thursday.14.4.2022",
         "(Bengali New Year).Thursday.15.04.2022", "(HS Exam Duty).Saturday.02.04.2022",
-        "(HS Exam Duty).Monday.04.04.2022", "(HS Exam Duty).Tuesday.5.04.2022",
+        "(HS Exam Duty).Monday.04.04.2022",
         "(HS Exam Duty).Saturday.16.04.2022", "(HS Exam Duty).Monday.18.04.2022",
         "(HS Exam Duty).Tuesday.19.04.2022", "(HS Exam Duty).Wednesday.20.4.2022",
         "(HS Exam Duty).Friday.22.04.2022", "(HS Exam Duty).Saturday.23.04.2022",
