--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ q {font-style: italic;}
         "(HS Exam Duty).Tuesday.19.04.2022", "(HS Exam Duty).Wednesday.20.4.2022",
         "(HS Exam Duty).Friday.22.04.2022", "(HS Exam Duty).Saturday.23.04.2022",
         "(HS Exam Duty).Tuesday.26.04.2022", "(HS Exam Duty).Wednesdayy.27.03.2022",
-        "(May Day).Saturday.01.05.2022"];
+        "(May Day).Saturday.01.05.2022","(Muharam).Tuesday.09.08.2022","(Independence Day).Monday.15.08.2022","(Janmasthami).Friday.19.08.2022"];
       //alert(noClassHSXI);
       var g = new Date(today.getFullYear(), today.getMonth(), date, 11, 15, 00);
       for (var j1 = 0; j1 < holidayList.length; j1++) {
@@ -730,7 +730,7 @@ q {font-style: italic;}
     let weekDay = today.getDay();
     var holidayList = ["(Dol Jatra).Friday.18.03.2022", "(Holi).Saturday.19.03.2022","Harichand Thakur Birthday.Wednesday.30.03.2022",
       "(Ambedkar & Mahavir Jayanti).Thursday.14.4.2022",
-      "(Bengali New Year).Thursday.15.4.2022", "(May Day).Saturday.1.5.2022"];
+      "(Bengali New Year).Thursday.15.4.2022", "(May Day).Saturday.1.5.2022","(Muharam).Tuesday.09.08.2022","(Independence Day).Monday.15.08.2022","(Janmasthami).Friday.19.08.2022"];
     var nextHolidays = [];
     //alert( holidayList[1].split(".")[2]);
     document.getElementById("holiday-list-time").innerHTML = today;
