--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
       font-family: "Lucida Console";
       font-size: 25px;
       margin-top: 40px;
+      text-align: center;
     }
 
     #info-centre,
@@ -232,55 +233,63 @@
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
-      text-align: center;
+      padding: 35px;
     }
 
     #box-2 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
 
     #box-3 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
 
     #box-4 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
 
     #box-5 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
 
     #box-6 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
 
     #box-7 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
 
     #box-8 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
 
     #box-9 {
       background-color: rgb(224, 195, 30);
       width: 50%;
       height: 50%;
+      padding: 35px;
     }
   </style>
   <div class="slideshow-container">
