--- a/index.html
+++ b/index.html
@@ -475,63 +475,63 @@
         ["OFF.1st Period-AHL", "OFF.2nd Period", "OFF.3rd Period", "OFF.4th Period", "BREAK.", "OFF.5th Period", "OFF.6th Period", "OFF.7th Period","OFF.8th Period"],["XIIC.1st Period", "OFF.2nd Period", "XA.3rd Period", "VIIIA.4th Period", "BREAK.", "OFF.5th Period", "OFF.6th Period", "OFF.7th Period","XA.8th Period"], ["OFF.1st Period", "XIB.2nd Period", "OFF.3rd Period", "OFF.4th Period", "BREAK.", "VIIIA.5th Period", "IXA.6th Period", "OFF.7th Period","OFF.8th Period"], ["XIIC.1st Period", "VIB.2nd Period", "OFF.3rd Period", "VA.4th Period", "BREAK.", "OFF.5th Period", "OFF.6th Period", "OFF.7th Period","OFF.8th Period"], ["XIB.1st Period", "OFF.2nd Period", "XIAD.3rd Period", "OFF.4th Period", "BREAK.", "IXB.5th Period", "VIIIA.6th Period", "OFF.7th Period","OFF.8th Period"], ["OFF.1st Period", "IXB.2nd Period", "VIB.3rd Period", "OFF.4th Period", "BREAK.", "OFF.5th Period", "OFF.6th Period", "OFF.7th Period","VIIIA.8th Period"], ["VA.1st Period", "OFF.2nd Period", "XA.3rd Period", "OFF.4th Period", "BREAK.", "OFF.5th Period", "OFF.6th Period", "OFF.7th Period","OFF.8th Period"],      
         ];
       // filling of tables for Monday
-      document.getElementById("m1").innerHTML = weekly_Routine[magic_number + 1][0];
-      document.getElementById("m2").innerHTML = weekly_Routine[magic_number + 1][1];
-      document.getElementById("m3").innerHTML = weekly_Routine[magic_number + 1][2];
-      document.getElementById("m4").innerHTML = weekly_Routine[magic_number + 1][3];
-      document.getElementById("m5").innerHTML = weekly_Routine[magic_number + 1][5];
-      document.getElementById("m6").innerHTML = weekly_Routine[magic_number + 1][6];
-      document.getElementById("m7").innerHTML = weekly_Routine[magic_number + 1][7];
-      document.getElementById("m8").innerHTML = weekly_Routine[magic_number + 1][8];
+      document.getElementById("m1").innerHTML = weekly_Routine[magic_number + 1][0].split(".", 1);
+      document.getElementById("m2").innerHTML = weekly_Routine[magic_number + 1][1].split(".", 1);
+      document.getElementById("m3").innerHTML = weekly_Routine[magic_number + 1][2].split(".", 1);
+      document.getElementById("m4").innerHTML = weekly_Routine[magic_number + 1][3].split(".", 1);
+      document.getElementById("m5").innerHTML = weekly_Routine[magic_number + 1][5].split(".", 1);
+      document.getElementById("m6").innerHTML = weekly_Routine[magic_number + 1][6].split(".", 1);
+      document.getElementById("m7").innerHTML = weekly_Routine[magic_number + 1][7].split(".", 1);
+      document.getElementById("m8").innerHTML = weekly_Routine[magic_number + 1][8].split(".", 1);
 
       // filling of tables for Tuesday
-      document.getElementById("t1").innerHTML = weekly_Routine[magic_number + 2][0];
-      document.getElementById("t2").innerHTML = weekly_Routine[magic_number + 2][1];
-      document.getElementById("t3").innerHTML = weekly_Routine[magic_number + 2][2];
-      document.getElementById("t4").innerHTML = weekly_Routine[magic_number + 2][3];
-      document.getElementById("t5").innerHTML = weekly_Routine[magic_number + 2][5];
-      document.getElementById("t6").innerHTML = weekly_Routine[magic_number + 2][6];
-      document.getElementById("t7").innerHTML = weekly_Routine[magic_number + 2][7];
-      document.getElementById("t8").innerHTML = weekly_Routine[magic_number + 2][8];
+      document.getElementById("t1").innerHTML = weekly_Routine[magic_number + 2][0].split(".", 1);
+      document.getElementById("t2").innerHTML = weekly_Routine[magic_number + 2][1].split(".", 1);
+      document.getElementById("t3").innerHTML = weekly_Routine[magic_number + 2][2].split(".", 1);
+      document.getElementById("t4").innerHTML = weekly_Routine[magic_number + 2][3].split(".", 1);
+      document.getElementById("t5").innerHTML = weekly_Routine[magic_number + 2][5].split(".", 1);
+      document.getElementById("t6").innerHTML = weekly_Routine[magic_number + 2][6].split(".", 1);
+      document.getElementById("t7").innerHTML = weekly_Routine[magic_number + 2][7].split(".", 1);
+      document.getElementById("t8").innerHTML = weekly_Routine[magic_number + 2][8].split(".", 1);
 
       // filling of tables for Wednesday
-      document.getElementById("w1").innerHTML = weekly_Routine[magic_number + 3][0];
-      document.getElementById("w2").innerHTML = weekly_Routine[magic_number + 3][1];
-      document.getElementById("w3").innerHTML = weekly_Routine[magic_number + 3][2];
-      document.getElementById("w4").innerHTML = weekly_Routine[magic_number + 3][3];
-      document.getElementById("w5").innerHTML = weekly_Routine[magic_number + 3][5];
-      document.getElementById("w6").innerHTML = weekly_Routine[magic_number + 3][6];
-      document.getElementById("w7").innerHTML = weekly_Routine[magic_number + 3][7];
-      document.getElementById("w8").innerHTML = weekly_Routine[magic_number + 3][8];
+      document.getElementById("w1").innerHTML = weekly_Routine[magic_number + 3][0].split(".", 1);
+      document.getElementById("w2").innerHTML = weekly_Routine[magic_number + 3][1].split(".", 1);
+      document.getElementById("w3").innerHTML = weekly_Routine[magic_number + 3][2].split(".", 1);
+      document.getElementById("w4").innerHTML = weekly_Routine[magic_number + 3][3].split(".", 1);
+      document.getElementById("w5").innerHTML = weekly_Routine[magic_number + 3][5].split(".", 1);
+      document.getElementById("w6").innerHTML = weekly_Routine[magic_number + 3][6].split(".", 1);
+      document.getElementById("w7").innerHTML = weekly_Routine[magic_number + 3][7].split(".", 1);
+      document.getElementById("w8").innerHTML = weekly_Routine[magic_number + 3][8].split(".", 1);
       // filling of tables for Thursday
-      document.getElementById("th1").innerHTML = weekly_Routine[magic_number + 4][0];
-      document.getElementById("th2").innerHTML = weekly_Routine[magic_number + 4][1];
-      document.getElementById("th3").innerHTML = weekly_Routine[magic_number + 4][2];
-      document.getElementById("th4").innerHTML = weekly_Routine[magic_number + 4][3];
-      document.getElementById("th5").innerHTML = weekly_Routine[magic_number + 4][5];
-      document.getElementById("th6").innerHTML = weekly_Routine[magic_number + 4][6];
-      document.getElementById("th7").innerHTML = weekly_Routine[magic_number + 4][7];
-      document.getElementById("th8").innerHTML = weekly_Routine[magic_number + 4][8];
+      document.getElementById("th1").innerHTML = weekly_Routine[magic_number + 4][0].split(".", 1);
+      document.getElementById("th2").innerHTML = weekly_Routine[magic_number + 4][1].split(".", 1);
+      document.getElementById("th3").innerHTML = weekly_Routine[magic_number + 4][2].split(".", 1);
+      document.getElementById("th4").innerHTML = weekly_Routine[magic_number + 4][3].split(".", 1);
+      document.getElementById("th5").innerHTML = weekly_Routine[magic_number + 4][5].split(".", 1);
+      document.getElementById("th6").innerHTML = weekly_Routine[magic_number + 4][6].split(".", 1);
+      document.getElementById("th7").innerHTML = weekly_Routine[magic_number + 4][7].split(".", 1);
+      document.getElementById("th8").innerHTML = weekly_Routine[magic_number + 4][8].split(".", 1);
 
       // filling of tables for Friday
-      document.getElementById("f1").innerHTML = weekly_Routine[magic_number + 5][0];
-      document.getElementById("f2").innerHTML = weekly_Routine[magic_number + 5][1];
-      document.getElementById("f3").innerHTML = weekly_Routine[magic_number + 5][2];
-      document.getElementById("f4").innerHTML = weekly_Routine[magic_number + 5][3];
-      document.getElementById("f5").innerHTML = weekly_Routine[magic_number + 5][5];
-      document.getElementById("f6").innerHTML = weekly_Routine[magic_number + 5][6];
-      document.getElementById("f7").innerHTML = weekly_Routine[magic_number + 5][7];
-      document.getElementById("f8").innerHTML = weekly_Routine[magic_number + 5][8];
+      document.getElementById("f1").innerHTML = weekly_Routine[magic_number + 5][0].split(".", 1);
+      document.getElementById("f2").innerHTML = weekly_Routine[magic_number + 5][1].split(".", 1);
+      document.getElementById("f3").innerHTML = weekly_Routine[magic_number + 5][2].split(".", 1);
+      document.getElementById("f4").innerHTML = weekly_Routine[magic_number + 5][3].split(".", 1);
+      document.getElementById("f5").innerHTML = weekly_Routine[magic_number + 5][5].split(".", 1);
+      document.getElementById("f6").innerHTML = weekly_Routine[magic_number + 5][6].split(".", 1);
+      document.getElementById("f7").innerHTML = weekly_Routine[magic_number + 5][7].split(".", 1);
+      document.getElementById("f8").innerHTML = weekly_Routine[magic_number + 5][8].split(".", 1);
 
       // filling of tables for Saturday
-      document.getElementById("s1").innerHTML = weekly_Routine[magic_number + 6][0];
-      document.getElementById("s2").innerHTML = weekly_Routine[magic_number + 6][1];
-      document.getElementById("s3").innerHTML = weekly_Routine[magic_number + 6][2];
-      document.getElementById("s4").innerHTML = weekly_Routine[magic_number + 6][3];
-      document.getElementById("s5").innerHTML = weekly_Routine[magic_number + 6][5];
-      document.getElementById("s6").innerHTML = weekly_Routine[magic_number + 6][6];
-      document.getElementById("s7").innerHTML = weekly_Routine[magic_number + 6][7];
-      document.getElementById("s8").innerHTML = weekly_Routine[magic_number + 6][8];
+      document.getElementById("s1").innerHTML = weekly_Routine[magic_number + 6][0].split(".", 1);
+      document.getElementById("s2").innerHTML = weekly_Routine[magic_number + 6][1].split(".", 1);
+      document.getElementById("s3").innerHTML = weekly_Routine[magic_number + 6][2].split(".", 1);
+      document.getElementById("s4").innerHTML = weekly_Routine[magic_number + 6][3].split(".", 1);
+      document.getElementById("s5").innerHTML = weekly_Routine[magic_number + 6][5].split(".", 1);
+      document.getElementById("s6").innerHTML = weekly_Routine[magic_number + 6][6].split(".", 1);
+      document.getElementById("s7").innerHTML = weekly_Routine[magic_number + 6][7].split(".", 1);
+      document.getElementById("s8").innerHTML = weekly_Routine[magic_number + 6][8].split(".", 1);
 
 
 
