--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 <script>
   function ShowRoutine() {
     var teacher_name = (document.getElementById("teacher-name").value).toUpperCase();
-    const teacher_set = ["VKS","AHL"];
+    const teacher_set = ["VKS","AHL","AHR"];
     var count = 0;
     while (teacher_name != teacher_set[count] && count < teacher_set.length)
       count++;
